# GameEngineDemo

./: .gitignore  CMakeLists.txt  Grid.cpp  Grid.hpp  LICENSE  Makefile  Node.cpp  Node.hpp  NodeAllocator.cpp  NodeAllocator.hpp  O3SpacePartition.asm  OldQuadTree.cpp  QuadTreeTesting.cpp  Readme.md  Rec.cpp  Rec.hpp  Rectangle.cpp  Rectangle.hpp  Simd.asm  Simd.cpp  SpacePartition.cpp  Tree.cpp  Tree.hpp  a.out  afterErase.html  b.out  build.bat  cachegrind.out.326  cachegrind.out.337  cachegrind.out.345  cachegrind.out.353  cachegrind.out.421  cachegrind.out.445  cachegrind.out.464  cachegrind.out.483  cachegrind.out.495  cachegrind.out.512  cachegrind.out.543  cachegrind.out.682  cachegrind.out.702  (+18 more)
cache/: cache_performance_test.c  data  thinkplot.py
headers/: Log.hpp  Material.hpp  Shader.hpp  Texture.hpp  Window.hpp  pch.hpp  typedefs.hpp
headers/Applications/: MacApplication.hpp
headers/Cameras/: PerspectiveCamera.hpp
headers/Core/: IndexBuffer.hpp  Material.hpp  Mesh.hpp  Model.hpp  Particle.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  VertexData.hpp  VertexLayout.hpp  VertexVector.hpp
headers/Debug/: Exception.hpp  Log.hpp  OpenGL.hpp  Stopwatch.hpp  Trace.hpp
headers/ECS/: ComponentArray.hpp  Coordinator.hpp  Entity.hpp  Types.hpp
headers/Events/: EventDispatcher.hpp  KeyEvents.hpp  MouseEvents.hpp
headers/Factories/: BoundingRectangleMeshFactory.hpp  CircleMeshFactory2D.hpp  CircleMeshFactory2DTexture.hpp  CubeMeshFactory.hpp  LineMeshFactory2D.hpp  QuadMeshFactory.hpp  QuadMeshFactory2D.hpp  QuadMeshFactory2DTexture.hpp  QuadMeshFactory3D.hpp  SphereMeshFactory.hpp  TriangleMeshFactory.hpp  TriangleMeshFactory3D.hpp
headers/Generators/: ParticleGenerator.hpp
headers/Inputs/: GLFWInput.hpp
headers/Interfaces/: IApplication.hpp  ICamera.hpp  IInput.hpp  ILayer.hpp  ILayerManager.hpp  ILayerStack.hpp  IMesh.hpp  IMeshFactory.hpp  IMeshPrimitive.hpp  IParticleTransform.hpp  IShader.hpp  ISimulator.hpp  ITexture.hpp  IVertex.hpp  IVertexAttribute.hpp  IWindow.hpp
headers/LayerManagers/: LayerStack.hpp
headers/Layers/: BytecodeLayer.hpp  ClearWindowLayer.hpp  CollisionDevLayer.hpp  ModelLoadLayer.hpp  PerspectiveCameraLayer.hpp  QuadTreeLayer.hpp  TriangleMeshesLayer.hpp
headers/Managers/: MaterialManager.hpp  MeshManager.hpp  ModelManager.hpp  ObjectCoordinator.hpp  ParticleGenerator.hpp  ParticleGeneratorManager.hpp  ParticleTransformManager.hpp  ShaderManager.hpp  TextureManager.hpp
headers/Math/: Matrix.hpp  Quaternion.hpp  Utils.hpp  Vector.hpp
headers/MeshPrimitives/: BoundingRectangleMeshPrimitive.hpp  CircleMeshPrimitive2D.hpp  CircleMeshPrimitive2DTexture.hpp  CubeMeshPrimitive.hpp  LineMeshPrimitive2D.hpp  ParticleQuadMeshPrimitive2D.hpp  ParticleQuadMeshPrimitive2DTexture.hpp  QuadMeshPrimitive2D.hpp  QuadMeshPrimitive2DTexture.hpp  QuadMeshPrimitive3D.hpp  SphereMeshPrimitive.hpp  TriangleMeshPrimitive3D.hpp
headers/Meshes/: DynamicMesh.hpp  StaticMesh.hpp
headers/ParticleTransforms/: DefaultParticleTransform.hpp  ExplosionParticleTransform.hpp
headers/Simulators/: BytecodeSimulator.hpp  CameraSimulator.hpp  CollisionDevSimulator.hpp  ECSCoordinatorSimulator.hpp  ModelLoadSimulator.hpp  QuadTreeSimulator.hpp  TriangleSimulator.hpp
headers/Singletons/: NullTexture.hpp
headers/VertexAttributes/: ModelMatrixVertexAttribute.hpp  NormalVertexAttribute.hpp  PositionVertexAttribute.hpp  PositionVertexAttribute2D.hpp  PositionVertexAttribute3D.hpp  TextureVertexAttribute.hpp  VertexAttributeFloat2.hpp  VertexAttributeFloat3.hpp  VertexAttributeFloat4.hpp  VertexAttributeMat4.hpp
headers/Vertices/: PositionNormalTextureVertex.hpp  PositionNormalVertex.hpp  PositionTextureVertex.hpp  PositionVertex.hpp
headers/VirtualMachines/: StackMachine.hpp
headers/Windows/: MacWindow.hpp
sources/: Log.cpp  Material.cpp  Shader.cpp  Texture.cpp  Window.cpp  main.cpp
sources/Applications/: MacApplication.cpp
sources/Cameras/: PerspectiveCamera.cpp
sources/Core/: IndexBuffer.cpp  Material.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexData.cpp  VertexLayout.cpp  VertexVector.cpp
sources/Debug/: Exception.cpp  Log.cpp  OpenGL.cpp  Stopwatch.cpp  Trace.cpp
sources/ECS/: ComponentArray.cpp  Coordinator.cpp  Entity.cpp  Types.cpp
sources/Events/: EventDispatcher.cpp  KeyEvents.cpp  KeyPressedEvent.cpp  KeyReleasedEvent.cpp  MouseEvents.cpp
sources/Factories/: BoundingRectangleMeshFactory.cpp  CircleMeshFactory2D.cpp  CircleMeshFactory2DTexture.cpp  CubeMeshFactory.cpp  LineMeshFactory2D.cpp  QuadMeshFactory.cpp  QuadMeshFactory2D.cpp  QuadMeshFactory2DTexture.cpp  QuadMeshFactory3D.cpp  SphereMeshFactory.cpp  TriangleMeshFactory.cpp  TriangleMeshFactory3D.cpp
sources/Generators/: ParticleGenerator.cpp
sources/Inputs/: GLFWInput.cpp
sources/Interfaces/: IApplication.cpp  ICamera.cpp  IInput.cpp  ILayer.cpp  ILayerManager.cpp  ILayerStack.cpp  IMesh.cpp  IMeshFactory.cpp  IMeshPrimitive.cpp  IParticleTransform.cpp  IShader.cpp  ITexture.cpp  IVertex.cpp  IVertexAttribute.cpp  IWindow.cpp
sources/LayerManagers/: LayerStack.cpp
sources/Layers/: BytecodeLayer.cpp  ClearWindowLayer.cpp  CollisionDevLayer.cpp  ModelLoadLayer.cpp  PerspectiveCameraLayer.cpp  QuadTree.hpp  QuadTreeLayer.cpp  TriangleMeshesLayer.cpp
sources/Managers/: MaterialManager.cpp  MeshManager.cpp  ModelManager.cpp  ObjectCoordinator.cpp  ParticleGenerator.cpp  ParticleGeneratorManager.cpp  ParticleTransformManager.cpp  ShaderManager.cpp  TextureManager.cpp
sources/Math/: Matrix.cpp  Quaternion.cpp  Utils.cpp  Vector.cpp
sources/MeshPrimitives/: BoundingRectangleMeshPrimitive.cpp  CircleMeshPrimitive2D.cpp  CircleMeshPrimitive2DTexture.cpp  CubeMeshPrimitive.cpp  LineMeshPrimitive2D.cpp  ParticleQuadMeshPrimitive2D.cpp  ParticleQuadMeshPrimitive2DTexture.cpp  QuadMeshPrimitive2D.cpp  QuadMeshPrimitive2DTexture.cpp  QuadMeshPrimitive3D.cpp  SphereMeshPrimitive.cpp  TriangleMeshPrimitive3D.cpp
sources/Meshes/: DynamicMesh.cpp  StaticMesh.cpp
(+162 files in other folders)
